# planck-proxy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Dockerfile.alpine  Dockerfile.dev  Dockerfile.old  HOWTO.Postfix  JSONSettingsLoader.py  MANIFEST.in  README  README.md  aliases.map  decrypt.support.sh  delete.key.from.keyring.py  docker.build.debug.sh  docker.build.sh  docker.proxylogs.sh  docker.push.sh  docker.run.sh  docker.run.sh.example  docker.shell.sh  docker.stop.sh  forwarding.map  list.keyrings.sh  loader.py  logging.conf  main.py  monitoring.py  nextmx.map  nextmx.map.example  pEpGate  pEpgate  pEpgate.py  pEpgatemain.py  pEphelpers.py  planckProxy  preloader.sh  pyproject.toml  pytest.ini  (+11 more)
.github/workflows/: python-app.yml
deb-inst/: raw-install
docker/: Cargo.toml  build.rs  check.ssl.py  docker-settings.json  env2config.py  libPlanckTransport.conf  libPlanckWrapper.conf  planck.init.sh  planckCore.conf  planckCoreSequoiaBackend.conf  planckCoreSequoiaBackendMakefile  planckPythonWrapper.conf  rsyslog.conf
docker/postfix/: main.cf  master.cf  transport  transport-proxy
docker/volume.skel/etc/: aliases
docker/volume.skel/etc/crontabs/: root
docker/volume.skel/etc/postfix/: main.cf  master.cf  sni  transport  transport-proxy
docker/volume.skel/home/proxy/: settings.json
docker/volume.skel/home/proxy/filters/: dummy_filter.py  smtp.mirror.filter.py
docker/volume/etc/postfix/: main.cf  master.cf  transport
docker/volume/home/proxy/: settings.json
etc/opendkim/: KeyTable  SigningTable  TrustedHosts  opendkim.conf
etc/postfix/: dynamicmaps.cf  header_checks  header_checks.db  ip.blacklist  ip.blacklist.db  main.cf  master.cf  restart.sh  routetest.sh  spamcheck.sh  transport  transport.db  virtual  virtual.db
etc/spamassassin/: local.cf
keys/: 0x3d.asc  peptest.asc  peptest.pub.asc
keys.global/: pEp.pub.asc
keys.static/: support@pep.security.asc
pepgate/: pEpgate.py  pEpgatemain.py  pEpgatesettings.py  pEphelpers.py
src/: mytest.py  pEpgate.py  pEpgatemain.py  pEpgatesettings.py  pEphelpers.py  planckProxy.py  proxy_main.py  proxy_settings.py
src/proxy/: planckProxy.py  proxy_main.py  proxy_settings.py
src/scripts/: _gate_test_runner.py  decrypt.py  delete.key.from.keyring.py  deletekeyfromkeyring.py  dummy_filter.py  encrypt.py  messages_cleanup.py
src/utils/: cryptography.py  emails.py  hooks.py  logging.py  message.py  parsers.py  printers.py
tests/: 01.basic.andy@0x3d.lu  06.redmine.multi.recipients  07.redmine.customer  09.real.customer  10.separate_short_and_long  11.redmine.andy.addrtouse  12.redmine.andy.private.addrtouse  15.attachment.in  18.user.to.jira  20.pm.bad.utf8  21.DKIM.test  98.101domain.mail.loop.test.eml  __init__.py  compare_mails.py  conftest.py  dummy_filter.py  dummy_filter_2.py  helpers.py  override_settings.py  test_send.py  test_tests.py  update_settings.py
tests/emails/: 02.basic.reply.andy@proxy.pep.security  03.minimal  04.decrypt.reply  05.dostuffreminder  08.customer.redmine.enigmail.unencrypted  13.encrypted.reply.andyprivate.crashreport.addrtouse  14.reply.test005  14.reply.test005.orig  16.attachment.out.employee  19.bad.from  30.virus.unencrypted.eml  31.virus.encrypted.eml  32.spam.unencrypted.eml  basic.eml  basic.enc.eml  basic_dts.eml  basic_evil.eml  basic_filter_evil.eml  basic_filter_evil.enc.eml  basic_filter_fail.eml  basic_filter_fail.enc.eml  basic_filter_retry.eml  basic_filter_retry.enc.eml  basic_img_att.eml  basic_inline_img.eml  basic_keyreset.eml  basic_keyreset.enc.eml  (+16 more)
(+62 files in other folders)
