[metadata]
name = pep-gate
version = attr: pepgate/.__version__
url = https://pep.security
author = p≡p security SA
author_email = info@pep.security
description = p≡p proxy for email
long_description = file: README.md
keywords = pEp, p≡p, pretty easy privacy, encryption, pgp, key management
license = Other License
classifiers =
    Environment :: Console
    Intended Audience :: System Administrators
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security :: Cryptography
    Topic :: Utilities

[options]
packages = find:
# keep aligned with setup.py
setup_requires =
   setuptools >= 39.2.0
   setuptools_scm >= 4.1.2
   wheel
install_requires =
   pEp

[options.extras_require]
test = coverage; pytest; pytest-cov

[options.packages.find]
exclude =
    tests*

[coverage:run]
omit = tests/*

[flake8]
# D10x:	Missing docstring in …
ignore = D100,D101,D102,D103,D104,D105,D106,D107

exclude =
    .git, __pycache__,
    build, dist, doc,
