[package]
name = "pep_engine_sequoia_backend"
description = "An implementation of the p≡p Engine's cryptotech interface using Sequoia."
version = "1.0.0"
authors = ["Neal H. Walfield neal@pep.foundation"]
homepage = "https://sequoia-pgp.org/"
repository = "https://gitea.pep.foundation/pEp.foundation/pEpEngineSequoiaBackend/"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "email"]
license = "GPL-3.0-or-later"
edition = "2018"
rust-version = "1.60"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
backtrace = "0.3.61"
chrono = "0.4.23"
enumber = "0.3"
lazy_static = "1"
libc = "0.2"
lru = "0.6.6"
memmem = "0.1"
memoffset = "0.6"

# When bumping the version of Sequoia search the code for XXX to find
# spots where we can take advantage of new features.
sequoia-openpgp = { version = "1.0", default-features = false }
thiserror = "1"
botan = { version = "0.10" }

[dependencies.rusqlite]
version = "0.25"
features = ["bundled", "collation", "blob"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = [
    "sequoia-openpgp/default",
]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
